[gd_scene load_steps=9 format=3 uid="uid://4umro3rhenhv"]

[ext_resource type="Script" uid="uid://dy6ipym3qsj41" path="res://entities/button/button.gd" id="1_7gf2j"]
[ext_resource type="Texture2D" uid="uid://blp5klaukqns6" path="res://entities/button/button.png" id="2_6bgj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2arti"]
size = Vector2(116, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lu2v"]
size = Vector2(120, 16)

[sub_resource type="Animation" id="Animation_cuwu5"]
resource_name = "down"
length = 0.06667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_qk3f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_4lu2v"]
resource_name = "up"
length = 0.133337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, -4), Vector2(0, -6), Vector2(0, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ik8q2"]
_data = {
&"RESET": SubResource("Animation_qk3f4"),
&"down": SubResource("Animation_cuwu5"),
&"up": SubResource("Animation_4lu2v")
}

[node name="Button" type="StaticBody2D"]
script = ExtResource("1_7gf2j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6bgj0")
offset = Vector2(0, -8)
hframes = 4

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
visible = false
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_2arti")
debug_color = Color(0.845326, 0.336928, 0.455054, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_4lu2v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ik8q2")
}

[connection signal="body_entered" from="ActivationArea" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_activation_area_body_exited"]
